--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"/>
-    <script data-main="./js/main" src="./node_modules/requirejs/require.js"></script>
+    <script data-main="main" src="node_modules/requirejs/require.js"></script>
 </body>
 </html>
