--- a/Server/wwwroot/index.html
+++ b/Server/wwwroot/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="root"/>
-    <script data-main="requireconfig" src="node_modules/requirejs/require.js"></script>
+    <script data-main="configuration/requireconfig.js" src="node_modules/requirejs/require.js"></script>
 </body>
 </html>
